--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,21 @@
 body{
         margin: 0;
         padding: 0;
+        font-family: 'Poppins', sans-serif;
 }
-
+.upper{
+        background-color: rgb(75, 26, 18);
+}
 .nav_menu{
        display: flex;
        justify-content: space-between; 
-       padding: 0px 40px;
+       padding: 0px 90px;
        align-items: center;
 
 }
 #logo{
         font-size: 36px;
-        font-family: Arial;
+
         color:#15295f;
         font-weight: 800;
 }
@@ -22,7 +25,6 @@ body{
         display: flex;
         font-size: 20px;
         color:#15295f;
-        font-family: Arial;
         font-weight: 600;
         cursor: pointer;
 }
@@ -48,3 +50,76 @@ body{
         border: 2px solid orangered;
         /* border-color: orangered; */
 }
+.hero{
+        display: flex;
+        justify-content: space-evenly; 
+        padding: 0px 90px;
+        align-items: center
+}
+.text{
+        margin-bottom: 40px;
+}
+.hero h5{
+        color:rgb(206,111,46);
+        font-size: 34px;
+        font-weight: 700;
+        line-height: 31px;
+        margin-bottom: 6px;
+       
+        
+}
+.hero h1{
+        font-weight:700;
+        font-size: 75px;
+        color: rgb(171,201,234);
+        line-height: 113px;
+        margin-top: 4px;
+        margin-bottom: 5px;
+        
+}
+.hero h4{
+        color:rgb(171,201,234);
+        margin-bottom: 15px;
+        margin-top: 5px;
+        
+}
+.hero p{
+       
+        color: #e0d9d9;
+        font-size: 15px;
+}
+.hero .button{
+        margin-top: 50px;
+        gap:30px;
+}
+ .download {
+        background-color: rgb(253,110,10);
+        color: #fff;
+        border: none;      
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 50px;
+
+}
+.download:hover{
+        color:rgb(253,110,10);
+        background-color: none;
+        border-color: rgb(206,110,10);
+}
+.contact{
+
+        
+        padding: 15px 32px;
+        text-align: center;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 50px;
+        border-color: #ff9800;
+        color: orange;
+      }
