--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@ body{
 }
 .upper{
         background-color: rgb(75, 26, 18);
+        height: 700px;
 }
 .nav_menu{
        display: flex;
@@ -59,6 +60,7 @@ body{
 .text{
         margin-bottom: 40px;
 }
+
 .hero h5{
         color:rgb(206,111,46);
         font-size: 34px;
@@ -143,31 +145,47 @@ body{
 .lower-part{
         display: flex;
         justify-content:space-between;
-        border:1px solid red;
         border-radius: 100px;
-        width:60%;
-        height: 90px;
-        padding: 20px;
-        position: absolute;
-        bottom: 100px;
-        left: 120px;
+        width:70%;
+        height: 100px;
+        padding:30px;
+        position: relative;
+        bottom: 50px;
+        margin-left: 200px;
+        background-color: rgb(42, 42, 43);
 }
 hr{
-        height:70px;
+        height:90px;
         font-weight: 100;
         color: gray;
 }
 .one{
         display:flex;
+        gap:15px;
+        
+        
 }
 .one img{
         background-color: rgb(253,110,10);
         border: none;      
-        padding: 15px 32px;
+        padding: 25px;
         text-decoration: none;
         display: inline-block;      
         font-size: 20px;
-        margin: 4px 2px;
+        top:10px;
+        width:20px;
         cursor: pointer;
         border-radius: 50%;
+}
+.one h6{
+        color: rgb(171,201,234);
+       font-size: 25px;
+
+}
+.one .part{
+        margin-bottom:70px;
+}
+.one h6 span{
+        color:rgb(253,110,10);
+        font-size: 10px;
 }
